# Obelisk-

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: README.md  main.cpp
src/logger/: Logger.cpp  Logger.h  logger.cpp  logger.h
src/manager/: Data.cpp  Data.h  README.md  Server_manager.cpp  Server_manager.h  Setup_Wizard.h  Setup_wizard.cpp  Setup_wizard.h
src/path/: Path.cpp  Path.h
src/server/: README.md  Server_class.cpp  Server_class.h
src/tls/: README.md  Tls_session.h  tls_session.cpp  tls_session.h
src/web/: Web.cpp  Web.h  web.cpp  web.h
tests/: test_main.cpp
